[workspace]
members = [
    "contracts/a_token",
    "contracts/v_token",
    "contracts/lending_pool",
    "contracts/psp22_emitable",
    "contracts/psp22_ownable",
    "contracts/test_reserves_minter",
    "contracts/block_timestamp_provider",
    "contracts/diamond",
    "contracts/flash_loan_receiver_mock",
    "contracts/lending_pool_facets/0_initialize",
    "contracts/lending_pool_facets/actions/**",

    "contracts/lending_pool_facets/interfaces/**",

    "contracts/lending_pool_facets/owner_actions/**",
    "contracts/lending_pool_facets/view/**",
    "contracts/periphery/**",
]

[package]
name = "lending_project"
version = "2.2.0"
authors = []
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22", "psp34", "ownable", "pausable", "access_control"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["codec"] }

num-traits = { version = "0.2.15", default-features = false }
checked_math = { path = "dependencies/checked_math", default-features = false }
itertools = { version ="0.10.5", default-features = false }

[lib]
name = "lending_project"
path = "lib.rs"
crate-type = [
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "openbrush/std",
    "primitive-types/std",
    "primitive-types/scale-info"
]
