[workspace]
members = [
    "contracts/a_token",
    "contracts/v_token",
    "contracts/lending_pool",
    "contracts/psp22_emitable",
    "contracts/psp22_ownable",
    "contracts/test_reserves_minter",
    "contracts/block_timestamp_provider",
    "contracts/flash_loan_receiver_mock",

    "contracts/periphery/**",
]

[package]
name = "lending_project"
version = "2.2.0"
authors = []
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.7", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { path = "../../pendzl-contracts", default-features = false, features = [
    "psp22",
    "psp34",
    "ownable",
    "pausable",
    "access_control",
] }
primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }

num-traits = { version = "0.2.15", default-features = false }
itertools = { version = "0.10.5", default-features = false }

[lib]
name = "lending_project"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    # These dependencies
    "pendzl/std",
    "primitive-types/std",
    "primitive-types/scale-info",
]
