[package]
name = "abax_contracts"
version = "0.3.0"
authors = ["Łukasz Łakomy", "Konrad Wierzbik"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }

abax_library = { path = "../library", default-features = false }

scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.4", default-features = false, features = [
    "psp22",
    "psp22_burnable",
    "psp22_mintable",
    "ownable",
    "pausable",
    "access_control",
] }

[lib]
name = "abax_contracts"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    # These dependencies
    "abax_library/std",
    "pendzl/std",
]
