[package]
name = "abax_impls"
version = "0.1.1"
authors = []
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.3",  default-features = false, features = [
    "psp22",
    "ownable",
    "psp22_mintable",
    "psp22_burnable",
    "pausable",
    "access_control",
] }

abax_library = { path = "../library", default-features = false }
abax_traits = { path = "../traits", default-features = false }


primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }

num-traits = { version = "0.2.15", default-features = false }
itertools = { version = "0.10.5", default-features = false }

[lib]
name = "abax_impls"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    # These dependencies
    "abax_traits/std",
    "abax_library/std",
    "pendzl/std",
    "primitive-types/std",
    "primitive-types/scale-info",
]
