[package]
name = "abax_traits"
version = "0.1.1"
authors = []
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = [
    "derive",
] }

abax_library = { path = "../library", default-features = false }

scale-info = { version = "2.7", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { path = "../../../pendzl-contracts", default-features = false, features = [
    "psp22",
    "psp34",
    "ownable",
    "pausable",
    "access_control",
] }

[lib]
name = "abax_traits"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    # These dependencies
    "abax_library/std",
    "pendzl/std",
]
