[package]
name = "lending_pool"
version = "0.1.0"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.7", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { path = "../../../../pendzl-contracts", default-features = false, features = [
    "psp22",
    "ownable",
    "pausable",
    "access_control",
] }

lending_project = { path = "../..", default-features = false }

[lib]
name = "lending_pool"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "lending_project/std",
    "pendzl/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16      # Use slightly better optimizations.
overflow-checks = false

[profile.release]
overflow-checks = false
