[package]
name = "a_token"
version = "0.1.1"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.3",  default-features = false, features = [
    "psp22",
    "psp22_impl",
    "psp22_metadata",
    "psp22_metadata_impl",
] }

abax_traits = { path = "../../../traits", default-features = false }
abax_impls = { path = "../../../impls", default-features = false }
abax_library = { path = "../../../library", default-features = false }


[lib]
name = "a_token"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "abax_traits/std",
    "abax_impls/std",
    "abax_library/std",
    "pendzl/std",
]
ink-as-dependency = []
