[package]
name = "lending_pool"
version = "0.1.1"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.3", default-features = false, features = [
    "psp22",
    "access_control",
    "access_control_impl",
] }


abax_contracts = { path = "../../../contract_modules", default-features = false }
abax_library = { path = "../../../library", default-features = false }

[lib]
name = "lending_pool"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "abax_library/std",
    "abax_contracts/std",

    "pendzl/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16 # Use slightly better optimizations.
