[package]
name = "lending_pool"
version = "1.0.0"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com>"]
edition = "2021"
license = "BUSL-1.1"
description = "Abax Protocol Lending Pool contract"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "1.0.1-v1calls", default-features = false, features = [
    "psp22",
    "access_control",
    "access_control_impl",
    "set_code_hash_impl",
] }


abax_contracts = { version = "1.0.0", default-features = false }
abax_library = { version = "1.0.0", default-features = false }

[lib]
name = "lending_pool"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "abax_library/std",
    "abax_contracts/std",

    "pendzl/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16 # Use slightly better optimizations.
