[package]
name = "price_feed_provider"
version = "1.0.0"
authors = ["Łukasz Łakomy", "Konrad Wierzbik"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "1.0.1-v1calls", default-features = false, features = [
    "access_control",
    "access_control_impl",
] }


abax_library = { version = "1.0.0", default-features = false }
abax_contracts = { version = "1.0.0", default-features = false }


[lib]
name = "price_feed_provider"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies


    "abax_library/std",
    "abax_contracts/std",
    "pendzl/std",
]
ink-as-dependency = []
