[package]
name = "block_timestamp_provider"
version = "0.0.1"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.7", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { path = "../../../../../pendzl-contracts", default-features = false, features = [
    "ownable",
] }

lending_project = { path = "../../..", default-features = false }

[lib]
name = "block_timestamp_provider"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "lending_project/std",
    "pendzl/std",
]
ink-as-dependency = []
