[package]
name = "dia_oracle"
version = "0.1.1"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.7", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.0-alpha",  default-features = false, features = [
] }

abax_traits = { path = "../../../traits", default-features = false }
abax_impls = { path = "../../../impls", default-features = false }
abax_library = { path = "../../../library", default-features = false }


[lib]
name = "dia_oracle"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "abax_traits/std",
    "abax_impls/std",
    "abax_library/std",
    "pendzl/std",
]
ink-as-dependency = []
