[package]
name = "flash_loan_receiver_mock"
version = "0.0.1"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.7", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { path = "../../../../../pendzl-contracts", default-features = false, features = [
    "psp22",
    "psp34",
    "ownable",
    "pausable",
    "access_control",
] }

lending_project = { path = "../../..", default-features = false }

[lib]
name = "flash_loan_receiver_mock"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "lending_project/std",
    "pendzl/std",
]
ink-as-dependency = []
