[package]
name = "flash_loan_receiver_mock"
version = "0.1.1"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.0-alpha",  default-features = false, features = [
    "psp22",
    "ownable",
    "pausable",
    "access_control",
] }

abax_traits = { path = "../../../traits", default-features = false }
abax_impls = { path = "../../../impls", default-features = false }
abax_library = { path = "../../../library", default-features = false }


[lib]
name = "flash_loan_receiver_mock"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "abax_traits/std",
    "abax_impls/std",
    "abax_library/std",
    "pendzl/std",
]
ink-as-dependency = []
