[package]
name = "psp22_ownable"
version = "0.1.1"
authors = ["Łukasz Łakomy", "Konrad Wierzbik"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.1", default-features = false, features = [
    "psp22",
    "psp22_impl",
    "psp22_metadata",
    "psp22_metadata_impl",
    "psp22_mintable",
    "psp22_mintable_impl",
    "ownable",
    "ownable_impl",
] }


abax_library = { path = "../../../library", default-features = false }


[lib]
name = "psp22_ownable"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies


    "abax_library/std",
    "pendzl/std",
]
ink-as-dependency = []
