[package]
name = "test_reserves_minter"
version = "0.2.0"
authors = ["Łukasz Łakomy", "Konrad Wierzbik"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { version = "0.2.4", default-features = false, features = [
    "psp22",
    "psp22_mintable",
    "ownable",
    "ownable_impl",
] }


abax_library = { version = "0.3.0", default-features = false }


[lib]
name = "test_reserves_minter"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies


    "abax_library/std",
    "pendzl/std",
]
ink-as-dependency = []
